# Estudos

./: README.md  pyproject.toml
src/: main.py
